# algorithms

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  prepare-docker.sh  run.sh
cpp-src/: CMakeLists.txt  run.sh
cpp-src/cpp-lang-code/: magic_spells.cpp
cpp-src/data-structures/tree/: binary_search_tree_insertion.cpp  tree_level_order_traversal.cpp  tree_top_view.cpp
cpp-src/data-structures/tree/avl/: avl_tree.cpp  avl_tree.h  avl_tree_test.cpp
cpp-src/data-structures/tree/bst/: bst.h  tree_inorder_traversal.cpp
cpp-src/docker-build/: Dockerfile
cpp-src/old-code/CPP/: main.cpp  main_slow.cpp  main_variadic.cpp
cpp-src/old-code/DataStructures_Arrays/: CMakeLists.txt
cpp-src/scripts/: build-run.sh  build.sh  prepare-docker.sh  stop-docker.sh
cpp-src/src/: main.cpp  reamde.md
cpp-src/src/algorithms/hacker-rank/: breaking_best_and_worst_records.cpp  breaking_best_and_worst_records.h  breaking_best_and_worst_records_test.cpp  cats_and_a_mouse.cpp  counting_valleys.cpp  divisible_sum_pairs.h  grading_students.cpp  number_line_jumps.cpp  the_birthday_bar.cpp  the_birthday_bar_test.cpp
cpp-src/src/algorithms/hacker-rank/implementation/: apple_and_orange.cpp  between_two_sets.cpp  between_two_sets.h  between_two_sets_test.cpp  breaking_best_and_worst_records.cpp  breaking_best_and_worst_records.h  divisible_sum_pairs.cpp  divisible_sum_pairs_test.cpp  the_birthday_bar.h  the_birthday_bar_test.cpp
cpp-src/src/algorithms/hacker-rank/search/: icecream_parlor.cpp  icecream_parlor.h  icecream_parlor_test.cpp
cpp-src/src/algorithms/hacker-rank/sorting/: closest_numbers.cpp
cpp-src/src/algorithms/hacker-rank/strings/: camelcase.cpp  camelcase.h  camelcase_test.cpp
cpp-src/src/cpp-lang-code/: bit_array.cpp
cpp-src/src/data-structures/array/: array_manipulation.cpp
cpp-src/src/data-structures/tree/avl/: avl_tree.h  avl_tree_test.cpp
cpp-src/src/data-structures/tree/bst/: bst.cpp  bst.h  bst_test.cpp  is_a_this_binary_tree.cpp  tree_top_view.cpp
cpp-src/src/old-code/CPP/: CMakeLists.txt  main_bit_array.cpp  main_index.cpp  main_set.cpp
cpp-src/src/old-code/DataStructures_Arrays/: main_array_manipulation.cpp
cpp-src/src/tools/: functions.h
cpp-src/template/: name.cpp  name.h  name_test.cpp  readme.md
cpp-src/tools/: functions.cpp
docker-build/: Dockerfile
go/: go.mod
go-src/: go.mod  go.sum  run.sh
go-src/algorithms/hacker_rank/: between_two_sets.go  between_two_sets_test.go
go-src/data_structures/: simple_test.go
go-src/data_structures/tree/bst/: bst.go  bst_test.go
java-src/: .gitignore  pom.xml  run.sh
java-src/src/main/java/com/josnelihurt/app/: App.java
java-src/src/main/java/com/josnelihurt/app/algorithms/hacker_rank/: Result.java
java-src/src/test/java/com/josnelihurt/app/: AppTest.java
java-src/src/test/java/com/josnelihurt/app/algorithms/hacker_rank/: BetweenTwoSetsTest.java
net-src/: run.sh
node-src/: package-lock.json  package.json  run.sh
python-src/: run.sh
rust-src/: Cargo.toml  run.sh
scripts/: build-run.sh  build.sh  prepare-docker.sh  start-docker.sh
src/: avl_tree.cpp  avl_tree.h  main.cpp
src/cpp/: abstract_classes_polymorphism.cpp  cpp_variadics.cpp
src/data-structures/tree/: avl_tree.cpp  avl_tree.h  is_a_this_binary_tree.cpp  tree_height_of_a_binary_tree.cpp  tree_postorder_traversal.cpp  tree_preorder_traversal.cpp
test/: avl_tree_test.cpp
test/data-structures/tree/: avl_tree_test.cpp
